migration to HttpClient 5.5.1